@md-5 says this is good idea Change from the shade dumping it to org.mcstats to com.gmail.nossr50.util.mcstats This does seem to make sense, as many plugins shading to one location seems bad. I think he is just doing it because of an issue with Spigot lately, though.

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
                             <include>org.mcstats.bukkit:metrics</include>
                         </includes>
                     </artifactSet>
+                    <relocations>
+                        <relocation>
+                            <pattern>org.mcstats</pattern>
+                            <shadedPattern>com.gmail.nossr50.util.mcstats</shadedPattern>
+                        </relocation>
+                    </relocations>
                 </configuration>
                 <executions>
                     <execution>
