--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -715,6 +715,7 @@ permissions:
             mcmmo.commands.mcgod: true
             mcmmo.commands.mcgod.others: true
             mcmmo.commands.mcpurge: true
+            mcmmo.commands.mcrank.others: true
             mcmmo.commands.mmoedit: true
             mcmmo.commands.mmoedit.others: true
             mcmmo.commands.mmoupdate: true
@@ -773,6 +774,8 @@ permissions:
         description: Allows access to the mcpurge command
     mcmmo.commands.mcrank:
         description: Allows access to the mcrank command
+    mcmmo.commands.mcrank.others:
+        description: Allows access to the mcrank command for other players
     mcmmo.commands.mcstats:
         description: Allows access to the mcstats command
     mcmmo.commands.mctop:
