--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -336,6 +336,9 @@ permissions:
             mcmmo.tools.mcremove: true
     mcmmo.tools.mcrefresh:
         description: Allows access to mcrefresh command
+        children:
+            mcmmo.commands.mcrefresh: true
+            mcmmo.commands.mcrefresh.others: true
     mcmmo.tools.mmoedit:
         default: false
         description: Allows access to mmoedit command
@@ -716,6 +719,8 @@ permissions:
             mcmmo.commands.mcgod.others: true
             mcmmo.commands.mcpurge: true
             mcmmo.commands.mcrank.others.all: true
+            mcmmo.commands.mcrefresh: true
+            mcmmo.commands.mcrefresh.others: true
             mcmmo.commands.mmoedit: true
             mcmmo.commands.mmoedit.others: true
             mcmmo.commands.mmoupdate: true
@@ -790,6 +795,10 @@ permissions:
         description: Allows access to the mcrank command for far players
     mcmmo.commands.mcrank.others.offline:
         description: Allows access to the mcrank command for offline players
+    mcmmo.commands.mcrefresh:
+        description: Allows access to the mcrefresh command
+    mcmmo.commands.mcrefresh.others:
+        description: Allows access to the mcrefresh command for other players
     mcmmo.commands.mcstats:
         description: Allows access to the mcstats command
     mcmmo.commands.mctop:
