More party members = more XP share bonus
Sorry, broke your party settings in config.yml. So now when there are
more party members near, the party share bonus is increased. :)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -71,7 +71,9 @@ Items:
 Party:
     Sharing:
         ExpShare_enabled: true
-        ExpShare_bonus: 1.1
+        ExpShare_bonus_base: 1.1
+        ExpShare_bonus_increase: 1.05
+        ExpShare_bonus_cap: 1.5
         ItemShare_enabled: true
         Range: 75.0
 
