--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -728,6 +728,7 @@ permissions:
             mcmmo.commands.herbalism: true
             mcmmo.commands.inspect: true
             mcmmo.commands.mcability: true
+            mcmmo.commands.mcc: true
             mcmmo.commands.mchud: true
             mcmmo.commands.mcmmo: true
             mcmmo.commands.mcrank: true
@@ -790,6 +791,8 @@ permissions:
         description: Allows access to the mcability command
     mcmmo.commands.mcability.others:
         description: Allows access to the mcability command for other players
+    mcmmo.commands.mcc:
+        description: Allows access to the mcc command
     mcmmo.commands.mcgod:
         description: Allows access to the mcgod command
     mcmmo.commands.mcgod.others:
