--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -66,7 +66,7 @@ commands:
         aliases: []
         description: Create/join a party
     inspect:
-        aliases: []
+        description: View detailed mcMMO info on another player
     mmoupdate:
         aliases: []
         description: Convert from Flat File to MySQL
