Automatically remove inactive party members after 7 days (default)
Inactive meaning, the player has offline for atleast 7 days. This will
prevent the parties.yml file from getting unnecessarily large.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -60,6 +60,12 @@ Mods:
 #  Settings for Parties
 ###
 Party:
+    #Amount of time (in hours) to wait between automatically kicking old party members
+    #To only run at server start, set to 0
+    #To never kick old users, set to -1
+    AutoKick_Interval: 12
+    #Any user who hasn't connected in this many days will get kicked from their party
+    Old_Party_Member_Cutoff: 7
     Sharing:
         ExpShare_enabled: true
         ExpShare_bonus_base: 1.1
