--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -66,6 +66,9 @@ Party:
     AutoKick_Interval: 12
     #Any user who hasn't connected in this many days will get kicked from their party
     Old_Party_Member_Cutoff: 7
+    #Set this to true to allow party members to attack each other.
+    FriendlyFire_Enabled: false
+    #Settings for party share modes
     Sharing:
         ExpShare_enabled: true
         ExpShare_bonus_base: 1.1
