--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -100,8 +100,7 @@ commands:
         aliases: []
         description: Toggle Admin chat or send admin chat messages
     mcpurge:
-        aliases: []
-        description: Purge users with 0 powerlevel and/or who haven't connected in over 30 days from the server DB.
+        description: Purge users with 0 powerlevel and/or who haven't connected in several months from the server DB.
 permissions:
     mcmmo.*:
         default: false
